# pretty-document-renderer

./: .flake8  .gitignore  Makefile  README.md  poetry.toml  pyproject.toml  tox.ini
src/pretty_text_renderer/: common.py  exceptions.py  test_example.py
src/pretty_text_renderer/blocks/: base.py  containerblock.py  paragraph.py
src/pretty_text_renderer/content/: base.py  container.py  paragraph.py
src/pretty_text_renderer/formatters/: base.py  identity.py
src/pretty_text_renderer/renderers/: base.py  container.py  paragraph.py
src/pretty_text_renderer/tests/: test_plain_text_render.py
