[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "true"
atomic = "true"

[tool.mypy]
python_version = "3.8"
show_error_codes = true
ignore_errors = false
strict= true
warn_return_any = true
disallow_any_generics = false
pretty = true
warn_redundant_casts = true

[tool.poetry]
name = "pretty-document-formatter"
version = "0.0.0"
description = "Simple and modifiable python text formatter to prepare and fill text into a different document formats"
authors = ["Oleh Chyhyryn <oleh.chyhyryn@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"
pyupgrade = "^3.15.0"
flake8-type-checking = "^2.8.0"
flake8-bugbear = "^24.1.17"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
